--- a/extra/src/common/http.conf
+++ b/extra/src/common/http.conf
@@ -26,14 +26,14 @@ init_by_lua '
         auth = require "common.auth"
     end
 
-    local marathonhttpauth = os.getenv("MESOSPHERE_HTTP_CREDENTIALS")
-    if marathonhttpauth ~= nil then
+    local basichttpauth = os.getenv("MESOSPHERE_HTTP_CREDENTIALS")
+    if basichttpauth ~= nil then
       ngx.log(
           ngx.NOTICE,
           "MESOSPHERE_HTTP_CREDENTIALS is set"
           )
     else
-        ngx.log(ngx.NOTICE, "Marathon not using BASIC Authorization")
+        ngx.log(ngx.NOTICE, "Mesosphere services not using BASIC Authorization")
     end
 
     DEFAULT_SCHEME = os.getenv("DEFAULT_SCHEME")
